--- a/bootstrap/services.html
+++ b/bootstrap/services.html
@@ -4,8 +4,82 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/fontawesome.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
-    
-</body>
+    <nav class="navbar navbar-expand-lg navbar-light menu shadow fixed-top">
+        <div class="container">
+          <a class="navbar-brand" href="#"><h1 style="color: white;">Nile Agency</h1>
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Services</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About Us</a>
+              </li>
+            </ul>
+            <button type="button" class="rounded-pill btn-rounded">Contact Us
+              <span>
+                <i class="fas fa-arrow-right"></i>
+              </span>
+            </button>
+          </div>
+        </div>
+      </nav>
+      <!-- introduction to services -->
+      <section class="service-intro-section">
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-md-12 text-center text-white">
+              <h1 class="display-4 fw-bold">
+                "Transforming Businesses with Tailored Digital Solutions and Innovative Strategies"
+              </h1>
+            </div>
+        </div>
+      </section>
+      <section class="subheadline">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6 text-start">
+              <h1 class="display-3">
+                <span class="display-4--intro fw-bold text-white">
+                  What We Do<br>
+                </span>
+              </h1>
+              <h4>
+                <span class="display-3--description lh-lg text-white">
+                  Product form and functionality alone are not enough to compete
+                  in an extremely competitive market. To stand out, we design smart,
+                  simple, and human-centric products based on user insight that connect
+                  with people on a deeper level. In today’s extremely competitive market,
+                  product form and functionality alone are not enough to secure a leading
+                  position. At Nile Agency, we believe that to truly stand out, products
+                  must resonate deeply with their users. This is why we focus on designing smart,
+                  simple, and human-centric digital solutions that go beyond mere utility.
+                  At Nile Agency, our commitment to excellence drives us to continuously
+                  refine our processes and enhance our offerings. We are dedicated to delivering
+                  digital solutions that are not only smart and simple but also profoundly impactful,
+                  setting us apart in the competitive landscape.
+                </span>
+              </h4>
+            </div>
+            <div class="col-md-6 align-items-center">
+              <div class="service-box img-fluid">
+                <img src="./images/subheadline-pic.jpeg" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+  </body>
 </html>
