--- a/bootstrap/services.html
+++ b/bootstrap/services.html
@@ -37,7 +37,7 @@
         </div>
       </nav>
       <!-- introduction to services -->
-      <section class="service-intro-section">
+      <!-- <section class="service-intro-section">
         <div class="container">
           <div class="row align-items-center">
             <div class="col-md-12 text-center text-white">
@@ -46,7 +46,7 @@
               </h1>
             </div>
         </div>
-      </section>
+      </section> -->
       <section class="subheadline">
         <div class="container">
           <div class="row">
@@ -81,5 +81,218 @@
           </div>
         </div>
       </section>
+      <section>
+        <div class="container-fluid align-items-center">
+          <!--Web Develooment and operations -->
+          <div class="row servce-detail bg-color-1 text-center">
+            <div class="col-md-6 ">
+              <h1>1. Web Development And Operations</h1>
+              <ul class="list-unstyled">
+                  <ul>
+                    <li>Custom Website Design and Development</li>
+                    <li>Responsive Design</li>
+                    <li>User-Centric Approach</li>
+                    <li>E-commerce Solutions</li>
+                    <li>Content Management Systems (CMS)</li>
+                    <li>Performance Optimization</li>
+                    <li>Security Features</li>
+                    <li>Ongoing Maintenance and Support</li>
+                    <li>Integration Capabilities</li>
+                    <li>Analytics and Reporting</li>
+                  </ul>
+              </ul>
+            </div>
+            <div class="col-md-6">
+              <img src="./images/webdev/img2.jpeg" alt="" class="img-thumbnail">
+            </div>
+          </div>
+          <!-- Digital Marketing -->
+          <div class="row servce-detail bg-color-2 text-center">
+            <div class="col-md-6">
+              <h1>2. Digital Marketing</h1>
+              <ul class="list-unstyled">
+                  <ul>
+                    <li>Comprehensive Strategy Development</li>
+                    <li>Search Engine Optimization (SEO)</li>
+                    <li>Pay-Per-Click (PPC) Advertising</li>
+                    <li>Social Media Marketing</li>
+                    <li>Content Marketing</li>
+                    <li>Email Marketing</li>
+                    <li>Influencer Marketing</li>
+                    <li>Conversion Rate Optimization (CRO)</li>
+                    <li>Reputation Management</li>
+                    <li>Local SEO</li>
+                  </ul>
+              </ul>
+            </div>
+            <div class="col-md-6">
+              <img src="./images/digital Marketing/img1.png" alt="" class="img-thumbnail">
+            </div>
+          </div>
+          <!-- mobile app and software development -->
+          <div class="row servce-detail bg-color-3 text-center">
+            <div class="col-md-6">
+              <h1>3. Mobile App and Software Develooment</h1>
+              <ul class="list-unstyled">
+                  <ul>
+                    <li>Custom App Development</li>
+                    <li>Cross-Platform Development</li>
+                    <li>User-Centric Approach</li>
+                    <li>Enterprise Software Solutions</li>
+                    <li>API Integration</li>
+                    <li>Performance Optimization</li>
+                    <li>Security Features</li>
+                    <li>Ongoing Maintenance and Support</li>
+                    <li>Cloud-Based Solutions</li>
+                    <li>Integration with IoT</li>
+                  </ul>
+              </ul>
+            </div>
+            <div class="col-md-6">
+              <img src="./images/sotwaredev/img1.jpg" alt="" class="img-thumbnail">
+            </div>
+          </div>
+          <!-- Data Analysis -->
+          <div class="row servce-detail bg-color-4 text-center">
+            <div class="col-md-6">
+              <h1>4. Data Analysis</h1>
+              <ul class="list-unstyled">
+                  <ul>
+                    <li>Comprehensive Data Collection</li>
+                    <li>Data Cleaning and Preparation</li>
+                    <li>Descriptive Analytics</li>
+                    <li>Predictive Analytics</li>
+                    <li>Prescriptive Analytics</li>
+                    <li>Real-Time Analytics</li>
+                    <li>Custom Dashboards and Reporting</li>
+                    <li>Advanced Statistical Analysis</li>
+                    <li>Data Visualization</li>
+                    <li>Big Data Solutions</li>
+                    <li>Market and Customer Analysis</li>
+                    <li>Operational Analytics</li>
+                    <li>Risk Management</li>
+                    <li>Data Governance and Compliance</li>
+                  </ul>
+              </ul>
+            </div>
+            <div class="col-md-6">
+              <img src="./images/Data analysis/img2.jpeg" alt="" class="img-thumbnail">
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="get-started">
+        <div class="container">
+          <div class="row text-center align-items-center">
+            <h1 class="display-3 fw-bold">
+              Get Started
+            </h1>
+            <p class="display-4">
+              <i class="fas fa-quote-left"></i>
+              Do you have a project or an idea to discuss?
+              <i class="fas fa-quote-right"></i>
+            </p>
+            <div class="btn">
+              <button type="button" class="rounded-pill btn-anime">Let's Work
+              </button>
+              <span class="border-animation border-animation--border-1"></span>
+              <span class="border-animation border-animation--border-2"></span>
+            </div>
+          </div>
+        </div>
+      </section>
+            <!-- FOOOTER SECTION -->
+            <footer class="footer shadow">
+              <div class="container">
+                <div class="row">
+                  <!-- whatsup number -->
+                  <div class="col-md-4 col-lg-4 contact-box pt-1 d-md-block d-lg-flex d-flex">
+                    <div class="contact-box__icon">
+                      <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-phone-call" viewBox="0 0 24 24" stroke-width="1" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2" />
+                        <path d="M15 7a2 2 0 0 1 2 2" />
+                        <path d="M15 3a6 6 0 0 1 6 6" />
+                      </svg>
+                    </div>
+                    <div class="contact-box __info">
+                      <a href="" class="contact-box__info__title">+123456789</a>
+                      <p class="contact-box __info__subtite">Mon-Fri 9am-6pm</p>
+                    </div>
+                  </div>
+                  <!-- Email -->
+                  <div class="col-md-4 col-lg-4 contact-box pt-1 d-md-block d-lg-flex d-flex">
+                    <div class="contact-box__icon">
+                      <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-mail-opened" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M3 9l9 6l9 -6l-9 -6l-9 6" />
+                        <path d="M21 9v10a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-10" />
+                        <path d="M3 19l6 -6" />
+                        <path d="M15 13l6 6" />
+                      </svg>
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2" />
+                        <path d="M15 7a2 2 0 0 1 2 2" />
+                        <path d="M15 3a6 6 0 0 1 6 6" />
+                      </svg>
+                    </div>
+                    <div class="contact-box __info">
+                      <a href="" class="contact-box__info__title">info@nileagency.com</a>
+                      <p class="contact-box __info__subtite">Online Support</p>
+                    </div>
+                  </div>
+                  <!-- Address -->
+                  <div class="col-md-4 col-lg-4 contact-box pt-1 d-md-block d-lg-flex d-flex">
+                    <div class="contact-box__icon">
+                      <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-2" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M12 18.5l-3 -1.5l-6 3v-13l6 -3l6 3l6 -3v7.5" />
+                        <path d="M9 4v13" />
+                        <path d="M15 7v5.5" />
+                        <path d="M21.121 20.121a3 3 0 1 0 -4.242 0c.418 .419 1.125 1.045 2.121 1.879c1.051 -.89 1.759 -1.516 2.121 -1.879z" />
+                        <path d="M19 18v.01" />
+                      </svg>
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2" />
+                        <path d="M15 7a2 2 0 0 1 2 2" />
+                        <path d="M15 3a6 6 0 0 1 6 6" />
+                      </svg>
+                    </div>
+                    <div class="contact-box __info">
+                      <a href="" class="contact-box__info__title">Addis Abeba, Ethiopia</a>
+                      <p class="contact-box __info__subtite">Bole Road</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="footer-sm" style="background-color: #212121;">
+                <div class="container">
+                  <div class="row py-4 text-center text-white">
+                    <div class="col-lg-5 col-md-6 mb-4 mb-md-0">
+                      connect with our social media
+                    </div>
+                    <div class="col-lg-7 col-md-6">
+                      <a href=""><i class="fab fa-facebook"></i></a>
+                      <a href=""><i class="fab fa-twitter"></i></a>
+                      <a href=""><i class="fab fa-github"></i></a>
+                      <a href=""><i class="fab fa-instagram"></i></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="footer-bottom pt-5 pb-5">
+                <div class="container">
+                  <div class="row text-center text-white">
+                    <div class="col-12">
+                      <div class="footer-bottom__copyright">
+                        &copy; 2024 Nile Agency. All Rights Reserved.
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </footer>
+            <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
   </body>
 </html>
