--- a/bootstrap/AboutUs.html
+++ b/bootstrap/AboutUs.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light menu shadow fixed-top">
         <div class="container">
-          <a class="navbar-brand" href="#"><h1 style="color: white;">Nile Agency</h1>
+          <a class="navbar-brand" href="#"><h1 style="color: white;" href="./index.html">Nile Agency</h1>
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -19,20 +19,22 @@
           <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Services</a>
+                <a class="nav-link" href="./services.html">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About Us</a>
+                <a class="nav-link" href="./AboutUs.html">About Us</a>
               </li>
             </ul>
-            <button type="button" class="rounded-pill btn-rounded">Contact Us
-              <span>
-                <i class="fas fa-arrow-right"></i>
-              </span>
-            </button>
+            <a href="./ContactUs.html">
+              <button type="button" class="rounded-pill btn-rounded" href="./ContactUs.html">Contact Us
+                <span>
+                  <i class="fas fa-arrow-right"></i>
+                </span>
+              </button>
+            </a>
           </div>
         </div>
     </nav>
